Switch to Vert.x 5