@@ -32,6 +32,7 @@ import io.fabric8.kubernetes.client.ConfigBuilder;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.KubernetesClientBuilder;
 import io.fabric8.kubernetes.client.dsl.AnyNamespaceOperation;
+import io.fabric8.kubernetes.client.dsl.Gettable;
 import io.fabric8.kubernetes.client.dsl.Resource;
 import io.fabric8.kubernetes.client.informers.ResourceEventHandler;
 import io.smallrye.mutiny.Uni;
@@ -47,7 +48,7 @@ import io.vertx.core.Vertx;
  * An implementation of service discovery for Kubernetes.
  * This implementation locates a Kubernetes service and retrieves the <em>endpoints</em> (the address of the pods
  * backing the service).
- *
+ * <p>
  * Experimental feature: EndpointSlice-based service discovery.
  * Behavior and configuration may change in future versions.
  *
@@ -64,13 +65,11 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
     private final String namespace;
     private final boolean secure;
     private final Vertx vertx;
-    private final int requestRetryBackoffLimit;
-    private final int requestRetryBackoffInterval;
     private final boolean useEndpointSlices;
 
     private static final Logger LOGGER = LoggerFactory.getLogger(KubernetesServiceDiscovery.class);
 
-    private AtomicBoolean invalidated = new AtomicBoolean();
+    private final AtomicBoolean invalidated = new AtomicBoolean();
 
     /**
      * Creates a new KubernetesServiceDiscovery.
@@ -86,9 +85,9 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
         this.application = config.getApplication() == null ? serviceName : config.getApplication();
         this.namespace = config.getK8sNamespace() == null ? base.getNamespace() : config.getK8sNamespace();
         this.portName = config.getPortName();
-        this.requestRetryBackoffInterval = config.getRequestRetryBackoffInterval() == null ? 0
+        int requestRetryBackoffInterval = config.getRequestRetryBackoffInterval() == null ? 0
                 : Integer.parseInt(config.getRequestRetryBackoffInterval());
-        this.requestRetryBackoffLimit = config.getRequestRetryBackoffLimit() == null ? 0
+        int requestRetryBackoffLimit = config.getRequestRetryBackoffLimit() == null ? 0
                 : Integer.parseInt(config.getRequestRetryBackoffLimit());
 
         allNamespaces = namespace != null && namespace.equalsIgnoreCase("all");
@@ -200,7 +199,6 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
         });
     }
 
-    @SuppressWarnings("unchecked")
     private <T> String getName(T obj) {
         return ((HasMetadata) obj).getMetadata().getName();
     }
@@ -231,9 +229,9 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
     }
 
     private Uni<Map<Endpoints, List<Pod>>> fetchServiceEnpoints() {
-        Uni<Map<Endpoints, List<Pod>>> endpointsUni = Uni.createFrom().emitter(
+        return Uni.createFrom().emitter(
                 emitter -> {
-                    vertx.executeBlocking(future -> {
+                    vertx.executeBlocking(() -> {
                         final Map<Endpoints, List<Pod>> items;
 
                         if (allNamespaces) {
@@ -248,11 +246,10 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
                                     .getItems();
                             items = gatherBackendPodsInNamespace(endpointsList);
                         }
-                        future.complete(items);
-                    }, result -> {
+                        return items;
+                    }).onComplete(result -> {
                         if (result.succeeded()) {
-                            @SuppressWarnings("unchecked")
-                            Map<Endpoints, List<Pod>> endpoints = (Map<Endpoints, List<Pod>>) result.result();
+                            Map<Endpoints, List<Pod>> endpoints = result.result();
                             emitter.complete(endpoints);
                         } else {
                             LOGGER.error("Unable to retrieve the endpoint from the {} service", application,
@@ -261,13 +258,12 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
                         }
                     });
                 });
-        return endpointsUni;
     }
 
     private Uni<List<EndpointSlice>> fetchServiceEndpointSlice() {
-        Uni<List<EndpointSlice>> slicesUni = Uni.createFrom().emitter(
+        return Uni.createFrom().emitter(
                 emitter -> {
-                    vertx.executeBlocking(future -> {
+                    vertx.executeBlocking(() -> {
                         List<EndpointSlice> items = new ArrayList<>();
 
                         if (allNamespaces) {
@@ -284,11 +280,10 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
                                     .getItems();
                             items.addAll(endpointSlices);
                         }
-                        future.complete(items);
-                    }, result -> {
+                        return items;
+                    }).onComplete(result -> {
                         if (result.succeeded()) {
-                            @SuppressWarnings("unchecked")
-                            List<EndpointSlice> endpointSlices = (List<EndpointSlice>) result.result();
+                            List<EndpointSlice> endpointSlices = result.result();
                             emitter.complete(endpointSlices);
                         } else {
                             LOGGER.error("Unable to retrieve the endpoint from the {} service", application,
@@ -297,7 +292,6 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
                         }
                     });
                 });
-        return slicesUni;
     }
 
     private List<ServiceInstance> fromSlicesToStorkServiceInstances(List<EndpointSlice> endpointSlices,
@@ -341,13 +335,12 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
     private Map<Endpoints, List<Pod>> gatherBackendPodsInNamespace(List<Endpoints> endpointsList) {
         Map<Endpoints, List<Pod>> items = new HashMap<>();
         for (Endpoints endpoint : endpointsList) {
-            List<Pod> backendPods = new ArrayList<>();
             List<String> podNames = endpoint.getSubsets().stream()
                     .flatMap(endpointSubset -> endpointSubset.getAddresses().stream())
-                    .map(address -> address.getTargetRef().getName()).collect(Collectors.toList());
-            backendPods.addAll(podNames.stream()
+                    .map(address -> address.getTargetRef().getName()).toList();
+            List<Pod> backendPods = podNames.stream()
                     .map(name -> client.pods().inNamespace(namespace).withName(name))
-                    .map(podPodResource -> podPodResource.get()).collect(Collectors.toList()));
+                    .map(Gettable::get).collect(Collectors.toList());
             items.put(endpoint, backendPods);
         }
         return items;
@@ -359,7 +352,7 @@ public class KubernetesServiceDiscovery extends CachingServiceDiscovery {
             List<Pod> backendPods = new ArrayList<>();
             List<String> podNames = endpoint.getSubsets().stream()
                     .flatMap(endpointSubset -> endpointSubset.getAddresses().stream())
-                    .map(address -> address.getTargetRef().getName()).collect(Collectors.toList());
+                    .map(address -> address.getTargetRef().getName()).toList();
             podNames.forEach(podName -> backendPods
                     .addAll(client.pods().inAnyNamespace().withField(METADATA_NAME, podName).list()
                             .getItems()));
